# morango-interpreter

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/bytecode/: context.rs  instruction.rs  mod.rs
src/interpreter/: interpreter.rs  mod.rs  stack.rs
src/parser/: mod.rs
test-sources/: test.mor  test2.mor
tests/: integration_tests.rs
