[package]
name = "morango"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mikhalevich <alex@mikhalevich.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5"
clap = "3.1.18"

[dev-dependencies]
tempfile = "3.3.0"
